--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <p>
+        <a href="recipes/alfredo_sauce.html">Easy Alfredo Sauce</a>
+    </p>
     
 </body>
 </html>
