--- a/recipes/alfredo_sauce.html
+++ b/recipes/alfredo_sauce.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Easy Alfredo Sauce</h1>
+    <img src="https://www.allrecipes.com/thmb/yhtQdgs7sPZ0KnwIHryZn0uGYJE=/0x512/filters:no_upscale():max_bytes(150000):strip_icc()/19402-quick-and-easy-alfredo-sauce-DDMFS-4x3-17abb2055c714807944172db9172b045.jpg" alt="Tasty Alfredo Sauce">
 </body>
 </html>
