--- a/recipes/alfredo_sauce.html
+++ b/recipes/alfredo_sauce.html
@@ -9,5 +9,17 @@
     <h1>Easy Alfredo Sauce</h1>
     <img src="https://www.allrecipes.com/thmb/yhtQdgs7sPZ0KnwIHryZn0uGYJE=/0x512/filters:no_upscale():max_bytes(150000):strip_icc()/19402-quick-and-easy-alfredo-sauce-DDMFS-4x3-17abb2055c714807944172db9172b045.jpg" alt="Tasty Alfredo Sauce">
     <h2>The easiest and tastiest alfredo sauce you can make!</h2>
+    <p>This Alfredo sauce is the backbone of a complete, 
+        and completely easy, summer supper. 
+        The creamy, 5-ingredient sauce and your favorite long pasta noodle
+        are all you need. 
+        Yes, you can add chicken or other protein — of course, 
+        we prefer summer vegetables, like vibrant tomatoes or squash, 
+        for a seasonal spin.</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>Test 1</ul>
+        <li>Test 2</ul>
+    </ul>
 </body>
 </html>
