Finish ingredient list

--- a/recipes/alfredo_sauce.html
+++ b/recipes/alfredo_sauce.html
@@ -18,8 +18,12 @@
         for a seasonal spin.</p>
     <h3>Ingredients</h3>
     <ul>
-        <li>Test 1</ul>
-        <li>Test 2</ul>
+        <li>1/2 cup of butter</li>
+        <li>1 (8 ounce) package of cream cheese</li>
+        <li>2 teaspoons of garlic poweder</li>
+        <li>2 cups of milk</li>
+        <li>6 ounces of grated Parmesan cheese</li>
+        <li>1/8 teaspoon ground black pepper</li>
     </ul>
 </body>
 </html>
