--- a/recipes/alfredo_sauce.html
+++ b/recipes/alfredo_sauce.html
@@ -25,5 +25,17 @@
         <li>6 ounces of grated Parmesan cheese</li>
         <li>1/8 teaspoon ground black pepper</li>
     </ul>
+
+    <h3>Steps</h3>
+    <ol>
+        <li>Gather all ingredients</li>
+        <li>Melt butter in a medium, non-stick saucepan over medium heat. 
+            Add cream cheese and garlic powder, stirring with a wire whisk until smooth. 
+            Add milk, a little at a time, whisking to smooth out lumps. 
+            Stir in Parmesan cheese and pepper. </li>
+        <li>Remove from heat when sauce reaches desired consistency. 
+            Sauce will thicken rapidly. Thin with milk if cooked too long.</li>
+        <li>Toss with hot pasta to serve.</li>
+    </ol>
 </body>
 </html>
