--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="recipes/alfredo_sauce.html"</li>
+        <li><a href="recipes/alfredo_sauce.html">Easy Alfredo</a></li>
+        <li><a href="recipes/macandcheese.html">Simple Mac and Cheese</a></li>
     </ul>
     
 </body>
