--- a/recipes/macandcheese.html
+++ b/recipes/macandcheese.html
@@ -9,6 +9,12 @@
     <h1>Simple Mac and Cheese</h1>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F03%2F19%2F238691-Simple-Macaroni-And-Cheese-mfs_006.jpg&q=60&c=sc&poi=auto&orient=true&h=512" height="300" width="300" alt="Creamy Mac and Cheese">
     <h2>The easiest and cheesiest Mac & Cheese</h2>
-    <p></p>
+    <p>Looking for a homemade alternative to boxed mac and cheese 
+        that's just as quick and easy? This stovetop mac and cheese 
+        uses staple ingredients and comes together in just 25 minutes. 
+        You'll want to bookmark this recipe for busy weeknights. 
+        The good news is, it's so simple that once you make it a couple times, 
+        you'll likely have it memorized.</p>
+    
 </body>
 </html>
