--- a/recipes/parm_chicken.html
+++ b/recipes/parm_chicken.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Parm Crusted Chicken</h1>
     <img src="https://www.allrecipes.com/thmb/79wJWJwCBjHb0O5EB9s5zcmtFI0=/750x0/filters:no_upscale():max_bytes(150000):strip_icc()/222171-easy-parmesan-crusted-chicken-DDMFS-4x3-2961-8a1b3eba9f9e434184790bd29accd2f9.jpg" width="300" height="300" alt="Delicious looking chicken">
+    <h2>The most delicious parmesean-crusted chicken you can make"</h2>
 </body>
 </html>
