--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="recipes/alfredo_sauce.html">Easy Alfredo</a></li>
         <li><a href="recipes/macandcheese.html">Simple Mac and Cheese</a></li>
+        <li><a href="recipes/parm_chicken.html">Parm Crusted Chicken</a></li>
     </ul>
     
 </body>
