Finish steps ordered list

--- a/recipes/parm_chicken.html
+++ b/recipes/parm_chicken.html
@@ -16,8 +16,25 @@
         <li>1/4 cup grated Parmesan Cheese</li>
         <li>4 (5 ounce) boneless, skinless chicken breast halves</li>
         <li>4 teaspoons Italian-seasoned dry bread crumbs</li>
+    </ul>
 
     <h3>Steps</h3>
-    </ul>
+    <ol>
+        <li>Gather all ingredients</li>
+        <li>Preheat oven to 425 degrees F. Line 
+            a rimmed baking sheet with parchment paper.</li>
+        <li>Mix mayo and Parmesan together in a 
+            medium bowl until well combined.</li>
+        <li>Arrange chicken on the prepared baking sheet. 
+            Spread mayonnaise mixture over top, 
+            then top with bread crumbs.</li>
+        <li>Cook in the preheated oven until chicken 
+            is no longer pink in the center and the 
+            juices run clear, about 20 minutes. 
+            An instant-read thermometer inserted into 
+            the center should read at least 165 degrees F 
+            (74 degrees C).</li>
+            
+    </ol>
 </body>
 </html>
