--- a/recipes/parm_chicken.html
+++ b/recipes/parm_chicken.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Parm Crusted Chicken</h1>
     <img src="https://www.allrecipes.com/thmb/79wJWJwCBjHb0O5EB9s5zcmtFI0=/750x0/filters:no_upscale():max_bytes(150000):strip_icc()/222171-easy-parmesan-crusted-chicken-DDMFS-4x3-2961-8a1b3eba9f9e434184790bd29accd2f9.jpg" width="300" height="300" alt="Delicious looking chicken">
-    <h2>The most delicious parmesean-crusted chicken you can make"</h2>
+    <h2>The most delicious parmesean-crusted chicken you can make</h2>
     <p>Make juicy Parmesan-crusted chicken with this quick and easy recipe.</p>
     <h3>Ingredients</h3>
     <ul>
@@ -34,7 +34,7 @@
             An instant-read thermometer inserted into 
             the center should read at least 165 degrees F 
             (74 degrees C).</li>
-            
+
     </ol>
 </body>
 </html>
