Add classes to recipes

--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="recipes/alfredo_sauce.html">Easy Alfredo</a></li>
-        <li><a href="recipes/macandcheese.html">Simple Mac and Cheese</a></li>
-        <li><a href="recipes/parm_chicken.html">Parm Crusted Chicken</a></li>
-    </ul>
-    
+        <li class="recipe"><a href="recipes/alfredo_sauce.html">Easy Alfredo</a></li>
+        <li class="recipe"><a href="recipes/macandcheese.html">Simple Mac and Cheese</a></li>
+        <li class="recipe"><a href="recipes/parm_chicken.html">Parm Crusted Chicken</a></li>
+    </ul>  
 </body>
 </html>
