Add classes to certain elements

--- a/recipes/parm_chicken.html
+++ b/recipes/parm_chicken.html
@@ -7,26 +7,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Parm Crusted Chicken</h1>
+    <h1 class="header">Parm Crusted Chicken</h1>
     <img src="https://www.allrecipes.com/thmb/79wJWJwCBjHb0O5EB9s5zcmtFI0=/750x0/filters:no_upscale():max_bytes(150000):strip_icc()/222171-easy-parmesan-crusted-chicken-DDMFS-4x3-2961-8a1b3eba9f9e434184790bd29accd2f9.jpg" width="300" height="300" alt="Delicious looking chicken">
-    <h2 id="1">The most delicious parmesean-crusted chicken you can make</h2>
+    <h2 class="header">The most delicious parmesean-crusted chicken you can make</h2>
     <p>Make juicy Parmesan-crusted chicken with this quick and easy recipe.</p>
-    <h3>Ingredients</h3>
-    <ul>
+    <h3 class="header">Ingredients</h3>
+    <ul class="list">
         <li>1/2 cups Hellmann's Mayo</li>
         <li>1/4 cup grated Parmesan Cheese</li>
         <li>4 (5 ounce) boneless, skinless chicken breast halves</li>
         <li>4 teaspoons Italian-seasoned dry bread crumbs</li>
     </ul>
 
-    <h3>Steps</h3>
-    <ol>
-        <li>Gather all ingredients</li>
+    <h3 class="header">Steps</h3>
+    <ol class="list">
+        <li class="list">Gather all ingredients</li>
         <li>Preheat oven to 425 degrees F. Line 
             a rimmed baking sheet with parchment paper.</li>
-        <li>Mix mayo and Parmesan together in a 
+        <li class="list">Mix mayo and Parmesan together in a 
             medium bowl until well combined.</li>
-        <li>Arrange chicken on the prepared baking sheet. 
+        <li class="list">Arrange chicken on the prepared baking sheet. 
             Spread mayonnaise mixture over top, 
             then top with bread crumbs.</li>
         <li>Cook in the preheated oven until chicken 
