--- a/recipes/macandcheese.html
+++ b/recipes/macandcheese.html
@@ -7,40 +7,40 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Simple Mac and Cheese</h1>
+    <h1 class="header">Simple Mac and Cheese</h1>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F03%2F19%2F238691-Simple-Macaroni-And-Cheese-mfs_006.jpg&q=60&c=sc&poi=auto&orient=true&h=512" height="300" width="300" alt="Creamy Mac and Cheese">
-    <h2>The easiest and cheesiest Mac & Cheese</h2>
+    <h2 class="header">The easiest and cheesiest Mac & Cheese</h2>
     <p>Looking for a homemade alternative to boxed mac and cheese 
         that's just as quick and easy? This stovetop mac and cheese 
         uses staple ingredients and comes together in just 25 minutes. 
         You'll want to bookmark this recipe for busy weeknights. 
         The good news is, it's so simple that once you make it a couple times, 
         you'll likely have it memorized.</p>
-    <h3>Ingredients</h3>
+    <h3 class="header">Ingredients</h3>
     <ul>
-        <li>1 (8 ounce) box of elbow macaroni</li>
-        <li>1/4 cup butter</li>
-        <li>1/4 cup all-purpose flour</li>
-        <li>1/2 teaspoon salt</li>
-        <li>ground black pepper to taste</li>
-        <li>2 cups milk</li>
-        <li>2 cups shredded Cheddar Cheese</li>
+        <li class="list">1 (8 ounce) box of elbow macaroni</li>
+        <li class="list">1/4 cup butter</li>
+        <li class="list">1/4 cup all-purpose flour</li> class="list"
+        <li class="list">1/2 teaspoon salt</li>
+        <li class="list">ground black pepper to taste</li>
+        <li class="list">2 cups milk</li>
+        <li class="list">2 cups shredded Cheddar Cheese</li>
     </ul>
 
-    <h3>Steps</h3>
+    <h3 class="header">Steps</h3>
     <ol>
-        <li>Bring a large pot of lightly salted water to a boil. 
+        <li class="list">Bring a large pot of lightly salted water to a boil. 
             Cook elbow macaroni in the boiling water, 
             stirring occasionally until cooked through 
             but firm to the bite, 8 minutes.</li>
-        <li>At the same time, melt butter in a saucepan over medium heat.</li>
-        <li>Add flour, salt, and pepper and stir until smooth, about 5 minutes.</li>
-        <li>Pour in milk slowly, while stirring continuously. 
+        <li class="list">At the same time, melt butter in a saucepan over medium heat.</li>
+        <li class="list">Add flour, salt, and pepper and stir until smooth, about 5 minutes.</li>
+        <li class="list">Pour in milk slowly, while stirring continuously. 
             Continue to cook and stir until mixture is smooth and bubbling, 
             about 5 minutes, making sure the milk doesn't burn.</li>
-        <li>Add Cheddar cheese and stir until melted, 2 to 4 minutes.</li>
-        <li>Drain macaroni and fold into cheese sauce until coated.</li>
-        <li>Serve hot and enjoy!</li>
+        <li class="list">Add Cheddar cheese and stir until melted, 2 to 4 minutes.</li>
+        <li class="list">Drain macaroni and fold into cheese sauce until coated.</li>
+        <li class="list">Serve hot and enjoy!</li>
     </ol>
 </body>
 </html>
