Fix typo in class name

--- a/recipes/macandcheese.html
+++ b/recipes/macandcheese.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Simple Mac & Cheese</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,7 +20,7 @@
     <ul>
         <li class="list">1 (8 ounce) box of elbow macaroni</li>
         <li class="list">1/4 cup butter</li>
-        <li class="list">1/4 cup all-purpose flour</li> class="list"
+        <li class="list">1/4 cup all-purpose flour</li>
         <li class="list">1/2 teaspoon salt</li>
         <li class="list">ground black pepper to taste</li>
         <li class="list">2 cups milk</li>
