Add header class

--- a/recipes/alfredo_sauce.html
+++ b/recipes/alfredo_sauce.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <h1>Easy Alfredo Sauce</h1>
+<body> class="header"
+    <h1 class="header">Easy Alfredo Sauce</h1>
     <img src="https://www.allrecipes.com/thmb/yhtQdgs7sPZ0KnwIHryZn0uGYJE=/0x512/filters:no_upscale():max_bytes(150000):strip_icc()/19402-quick-and-easy-alfredo-sauce-DDMFS-4x3-17abb2055c714807944172db9172b045.jpg" alt="Tasty Alfredo Sauce">
-    <h2>The easiest and tastiest alfredo sauce you can make!</h2>
+    <h2 class="header">The easiest and tastiest alfredo sauce you can make!</h2>
     <p>This Alfredo sauce is the backbone of a complete, 
         and completely easy, summer supper. 
         The creamy, 5-ingredient sauce and your favorite long pasta noodle
@@ -16,7 +16,7 @@
         Yes, you can add chicken or other protein — of course, 
         we prefer summer vegetables, like vibrant tomatoes or squash, 
         for a seasonal spin.</p>
-    <h3>Ingredients</h3>
+    <h3 class="header">Ingredients</h3>
     <ul>
         <li>1/2 cup of butter</li>
         <li>1 (8 ounce) package of cream cheese</li>
@@ -26,7 +26,7 @@
         <li>1/8 teaspoon ground black pepper</li>
     </ul>
 
-    <h3>Steps</h3>
+    <h3 class="header">Steps</h3>
     <ol>
         <li>Gather all ingredients</li>
         <li>Melt butter in a medium, non-stick saucepan over medium heat. 
