--- a/recipes/alfredo_sauce.html
+++ b/recipes/alfredo_sauce.html
@@ -18,24 +18,24 @@
         for a seasonal spin.</p>
     <h3 class="header">Ingredients</h3>
     <ul>
-        <li>1/2 cup of butter</li>
-        <li>1 (8 ounce) package of cream cheese</li>
-        <li>2 teaspoons of garlic poweder</li>
-        <li>2 cups of milk</li>
-        <li>6 ounces of grated Parmesan cheese</li>
-        <li>1/8 teaspoon ground black pepper</li>
+        <li class="list">1/2 cup of butter</li>
+        <li class="list">1 (8 ounce) package of cream cheese</li>
+        <li class="list">2 teaspoons of garlic poweder</li>
+        <li class="list">2 cups of milk</li>
+        <li class="list">6 ounces of grated Parmesan cheese</li>
+        <li class="list">1/8 teaspoon ground black pepper</li>
     </ul>
 
     <h3 class="header">Steps</h3>
     <ol>
-        <li>Gather all ingredients</li>
-        <li>Melt butter in a medium, non-stick saucepan over medium heat. 
+        <li class="list">Gather all ingredients</li>
+        <li class="list">Melt butter in a medium, non-stick saucepan over medium heat. 
             Add cream cheese and garlic powder, stirring with a wire whisk until smooth. 
             Add milk, a little at a time, whisking to smooth out lumps. 
             Stir in Parmesan cheese and pepper. </li>
-        <li>Remove from heat when sauce reaches desired consistency. 
+        <li class="list">Remove from heat when sauce reaches desired consistency. 
             Sauce will thicken rapidly. Thin with milk if cooked too long.</li>
-        <li>Toss with hot pasta to serve.</li>
+        <li class="list">Toss with hot pasta to serve.</li>
     </ol>
 </body>
 </html>
